Added tunneling, home page, symbolic linking, error pages, removed log4net

--- a/HttpFileServer/config.cfg
+++ b/HttpFileServer/config.cfg
@@ -1,3 +1,5 @@
-﻿url:http://C453.me
-webPageName:C453.me
+﻿url:http://Kronks.me
+webPageName:Kronks.me
 font:Adobe Gothic Std B
+about:Kronks.me is a multipurpose http server.
+/symlink/test:C:\Users\Alec\Desktop\test.txt
